; Changes that need to be made on the drupal database side after a push

; 7/12/17
Add vocab "shoutout_option" for general of CXi
    values: General, CXi
    default value: General
    required: true
    description: Choose if this is a general shoutout, or if it's customer experience related and counts toward prizes
    above field
    add css wrapper: .general-cxi-options

Add general_cxi field to shoutout content type
    type:boolean
    values: yes, no

Add the new general_cxi field to the top of the shoutout comment view
    No label and hide from display
    Edit the format row settings and add this row class with this replacement pattern "general-shoutout-[field_general_cxi]"